# tasks

./: .clang-format  CMakeLists.txt  Dockerfile.interview_tasks  task1.cpp
